Incorrect handling of NaN inside calc() for top-level calculation https://bugs.webkit.org/show_bug.cgi?id=234176

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-values/calc-infinity-nan-computed-expected.txt: Added.
* web-platform-tests/css/css-values/calc-infinity-nan-computed.html: Added.
* web-platform-tests/css/css-values/round-function-expected.txt:
* web-platform-tests/css/css-values/round-function.html:

Source/WebCore:

Add function to convert any top level NaN values to infinity values as per the spec.
This only affects the computed value of the calc expression, not its serialization.

Test: imported/w3c/web-platform-tests/css/css-values/calc-infinity-nan-computed.html

* css/calc/CSSCalcOperationNode.cpp:
(WebCore::CSSCalcOperationNode::combineChildren):
(WebCore::convertToTopLevelValue):
(WebCore::CSSCalcOperationNode::evaluateOperator):
* css/calc/CSSCalcOperationNode.h:



Canonical link: https://commits.webkit.org/248899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291911 268f45cc-cd09-0410-ab3c-d52691b4dbfc