Source/WebCore/css/calc/CSSCalcOperationNode.h
@@ -33,6 +33,8 @@ namespace WebCore {
 class CSSCalcOperationNode final : public CSSCalcExpressionNode {
     WTF_MAKE_FAST_ALLOCATED;
 public:
+    enum class IsRoot : bool { No, Yes };
+    
     static RefPtr<CSSCalcOperationNode> create(CalcOperator, RefPtr<CSSCalcExpressionNode>&& leftSide, RefPtr<CSSCalcExpressionNode>&& rightSide);
     static RefPtr<CSSCalcOperationNode> createSum(Vector<Ref<CSSCalcExpressionNode>>&& values);
     static RefPtr<CSSCalcOperationNode> createProduct(Vector<Ref<CSSCalcExpressionNode>>&& values);
@@ -125,10 +127,18 @@ private:
             return &rightSide;
         return nullptr;
     }
-
+    
+    static double convertToTopLevelValue(double value)
+    {
+        if (isnan(value))
+            value = std::numeric_limits<double>::infinity();
+        return value;
+    }
+    
     double evaluate(const Vector<double>& children) const
     {
-        return evaluateOperator(m_operator, children);
+        auto result = evaluateOperator(m_operator, children);
+        return m_isRoot == IsRoot::No ? result : convertToTopLevelValue(result);
     }
 
     static double evaluateOperator(CalcOperator, const Vector<double>&);
@@ -144,6 +154,7 @@ private:
     CalcOperator m_operator;
     Vector<Ref<CSSCalcExpressionNode>> m_children;
     bool m_allowsNegativePercentageReference = false;
+    IsRoot m_isRoot = IsRoot::Yes;
 };
 
 }
